k_app2/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
spec:
  selector:
    matchLabels:
      app: app2
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
        tier: backend
    spec:
      containers:
        - name: app2
          image: tak2siva/k8s_app2:latest
        - name: envoy-sidecar
          image: envoyproxy/envoy:latest
          ports:
            - name: http
              containerPort: 80
            - name: grpc
              containerPort: 50062
          volumeMounts:
            - name: config-volume
              mountPath: /etc/my-config/
          command: ["/usr/local/bin/envoy"]
          args: ["-c", "/etc/my-config/sidecar-envoy.json", "--service-cluster", "app2-sidecar", "--v2-config-only"]
      volumes:
        - name: config-volume
          configMap:
            name: app2-sidecar-config
