k_app2/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app2
spec:
  selector:
    app: app2
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    name: http
    nodePort: 30006
  - port: 50062
    name: grpc
    nodePort: 30062
  type: NodePort
